# ecstasy

./: .clang-format  .gitignore  01__basic__window_2main_8cpp.html  01__basic__window_2main_8cpp.js  01__basic__window_2main_8cpp__incl.dot  01__basic__window_2main_8cpp__incl.map  01__basic__window_2main_8cpp__incl.md5  01__basic__window_2main_8cpp_source.html  02__events_2main_8cpp.html  02__events_2main_8cpp.js  02__events_2main_8cpp__incl.dot  02__events_2main_8cpp__incl.map  02__events_2main_8cpp__incl.md5  02__events_2main_8cpp_source.html  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  _a_node_8cpp.html  _a_node_8cpp__incl.dot  _a_node_8cpp__incl.map  _a_node_8cpp__incl.md5  _a_node_8cpp_source.html  _a_node_8hpp.html  _a_node_8hpp.js  _a_node_8hpp__dep__incl.dot  _a_node_8hpp__dep__incl.map  _a_node_8hpp__dep__incl.md5  _a_node_8hpp__incl.dot  _a_node_8hpp__incl.map  _a_node_8hpp__incl.md5  _a_node_8hpp_source.html  _a_storage_8hpp.html  _a_storage_8hpp.js  _a_storage_8hpp__dep__incl.map  _a_storage_8hpp__dep__incl.md5  _a_storage_8hpp__incl.map  (+3822 more)
src/: CMakeLists.txt  return_input.cpp
src/ecstasy/: CMakeLists.txt  config.hpp.in  ecstasy.hpp
src/ecstasy/integration/: CMakeLists.txt
src/ecstasy/integration/event/: CMakeLists.txt  EventsManager.cpp  EventsManager.hpp
src/ecstasy/integrations/: CMakeLists.txt  include.hpp  integrations.hpp
src/ecstasy/integrations/event/: CMakeLists.txt  EventsManager.cpp  EventsManager.hpp  event.hpp  include.hpp
src/ecstasy/integrations/sfml/: CMakeLists.txt  include.hpp  sfml.hpp
src/ecstasy/integrations/user_action/: Action.hpp  ActionBinding.cpp  ActionBinding.hpp  ActionBindings.cpp  ActionBindings.hpp  ActionListener.hpp  CMakeLists.txt  PendingActions.hpp  PollActions.hpp  UserProfile.cpp  UserProfile.hpp  Users.cpp  Users.hpp  include.hpp
src/ecstasy/query/: CMakeLists.txt  ComplexQuery.hpp  Modifier.hpp  ModifiersList.hpp  NotModifier.hpp  Query.cpp  Query.hpp  QueryConcepts.hpp  Select.hpp  include.hpp  query.hpp
src/ecstasy/query/concepts/: CMakeLists.txt  Condition.hpp  GetMissingTypes.hpp  Modifier.hpp  QueryDataHolder.hpp  Queryable.hpp  QueryableNeedAdjust.hpp  add_optional.hpp  concepts.hpp  include.hpp  util.hpp
src/ecstasy/query/conditions/: CMakeLists.txt  Condition.hpp  EqualTo.hpp  Greater.hpp  GreaterEqual.hpp  Less.hpp  LessEqual.hpp  NotEqualTo.hpp  include.hpp
src/ecstasy/query/modifiers/: And.hpp  BinaryModifier.hpp  CMakeLists.txt  Maybe.hpp  Modifier.hpp  ModifiersList.hpp  Not.hpp  Or.hpp  Xor.hpp  include.hpp  modifiers.hpp
src/ecstasy/registry/: CMakeLists.txt  DeletionStack.cpp  DeletionStack.hpp  Modifiers.hpp  Registry.cpp  Registry.hpp  include.hpp  registry.hpp
src/ecstasy/registry/concepts/: CMakeLists.txt  ComponentType.hpp  QueryableAllocatorSize.hpp  include.hpp  (+6 more)
src/ecstasy/resource/: CMakeLists.txt  Resource.hpp
src/ecstasy/resources/: CMakeLists.txt  IResource.hpp  ObjectWrapper.hpp  Resource.hpp  include.hpp
src/ecstasy/rtti/: AType.cpp  AType.hpp  CMakeLists.txt  Type.hpp  TypeRegistry.cpp  TypeRegistry.hpp  include.hpp
src/ecstasy/serialization/: CMakeLists.txt  ComponentSerializer.hpp  EntityComponentSerializer.hpp  IEntityComponentSerializer.hpp  ISerializer.hpp  JsonSerializer.hpp  NodeSerializer.hpp  RawSerializer.hpp  Serializer.hpp  include.hpp  is_serializable.hpp
src/ecstasy/storage/: CMakeLists.txt  IStorage.hpp  Instances.hpp  MapStorage.hpp
src/ecstasy/storages/: AStorage.hpp  CMakeLists.txt  IStorage.hpp  Instances.hpp  MapStorage.hpp  MarkerStorage.hpp  StorageConcepts.hpp  SystemInstances.hpp  VectorStorage.hpp  include.hpp
src/ecstasy/system/: CMakeLists.txt  ISystem.hpp  Pipeline.cpp  Pipeline.hpp  Timer.cpp  Timer.hpp  include.hpp
src/ecstasy/thread/: CMakeLists.txt  Lockable.hpp  LockableView.hpp  SharedRecursiveMutex.cpp  SharedRecursiveMutex.hpp  include.hpp
src/util/: Allocator.hpp  BitSet.cpp  BitSet.hpp  CMakeLists.txt  StackAllocator.hpp  util.hpp
src/util/meta/: CMakeLists.txt  Traits.hpp  add_optional.hpp  apply.hpp  contains.hpp  filter.hpp  include.hpp  index.hpp  is_size_t_convertible.hpp  is_std_vector.hpp  is_type_bounded_array.hpp  left_outer_join.hpp  meta.hpp  outer_join.hpp  type_set_eq.hpp
src/util/serialization/: ANode.cpp  ANode.hpp  CMakeLists.txt  IArrayNode.hpp  INode.hpp  INodeFactory.hpp  IObjectNode.hpp  PolymorphicIterator.hpp  SerializableEnum.hpp  Serializer.hpp  foreach.hpp
src/utils/: BitSet.cpp  BitSet.hpp  CMakeLists.txt
tests/: CMakeLists.txt  test_return_input.cpp
tests/entity/: CMakeLists.txt  tests_Entities.cpp  tests_Entity.cpp  tests_RegistryEntity.cpp
tests/integration/: CMakeLists.txt
tests/integration/event/: CMakeLists.txt  tests_Gamepad.cpp  tests_Keyboard.cpp  tests_Mouse.cpp
tests/integration/user_action/: CMakeLists.txt  tests_ActionBinding.cpp  tests_ActionBindings.cpp  tests_PollActions.cpp  tests_UserProfile.cpp  tests_Users.cpp
tests/query/: CMakeLists.txt  tests_Query.cpp
tests/query/concepts/: CMakeLists.txt  tests_Queryable.cpp
tests/registry/: CMakeLists.txt  tests_DeletionStack.cpp  tests_Registry.cpp  tests_queryable_type.cpp
tests/resources/: CMakeLists.txt  tests_ObjectWrapper.cpp
tests/rtti/: CMakeLists.txt  tests_Type.cpp  tests_TypeRegistry.cpp
tests/serialization/: CMakeLists.txt  tests_ComponentSerializer.cpp  tests_Serializer.cpp  tests_concepts.cpp  tests_traits.cpp
tests/storage/: CMakeLists.txt  tests_Instances.cpp  tests_MapStorage.cpp  tests_MarkerStorage.cpp  tests_StorageConcept.cpp  tests_VectorStorage.cpp
tests/thread/: CMakeLists.txt  tests_Lockable.cpp  tests_LockableView.cpp  tests_SharedRecursiveMutex.cpp
tests/util/: CMakeLists.txt  tests_BitSet.cpp  tests_StackAllocator.cpp
tests/util/meta/: CMakeLists.txt  tests_add_optional.cpp  tests_apply.cpp  tests_contains.cpp  tests_filter.cpp  tests_is_size_t_convertible.cpp  tests_is_type_bounded_array.cpp  tests_outer_join.cpp  tests_type_set_eq.cpp
tests/util/serialization/: CMakeLists.txt
tests/utils/: CMakeLists.txt  tests_BitSet.cpp
(+374 files in other folders)
